# instrumation-report

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  try.html
.github/workflows/: ci.yml  release.yml
assets/: style.css
docs/: api.html  build_try.py  examples.html  get-started.html  index.html  try.html  try.template.html
examples/: generate.py  report.html  report.xlsx
instrumation_report/: __init__.py  measurement.py  report.py  section.py
instrumation_report/templates/: base.html
tests/: test_measurement.py  test_report.py  test_section.py
